--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/thegamenicorus/react-native-timeline-listview/issues"
   },
-  "homepage": "https://github.com/thegamenicorus/react-native-timeline-listview"
+  "homepage": "https://github.com/thegamenicorus/react-native-timeline-listview",
+  "dependencies": {
+    "moment": "^2.18.1"
+  }
 }
