--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/thegamenicorus/react-native-timeline-listview",
   "dependencies": {
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "react-native-swipeout": "^2.2.2"
   }
 }
